Prevent line wraps on mobile for ratings

--- a/frontend/src/Components/ImdbRating.css
+++ b/frontend/src/Components/ImdbRating.css
@@ -1,3 +1,7 @@
+.wrapper {
+  display: inline-block;
+}
+
 .image {
   align-content: center;
   margin-right: 5px;
